--- a/player.css
+++ b/player.css
@@ -5,7 +5,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Circular Std;
  
+}
+a{
+    text-decoration: none;
+}
+p,th,td
+{
+    font-family: Circular Std;
 }
 
 .main-container
@@ -22,7 +30,7 @@
     width: 16%;
     height: 100%;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
   
 }
 .logo
@@ -31,17 +39,35 @@
 }
 .side-item
 {
-    width: 100%;
+    width: 80%;
+    padding: 10px;
     display: flex;
-    margin: 10px 20px;
-  align-items: center;
+   margin-left: 20px;
+    align-items: center;
 }
+
 .side-item>p{
-    margin-left: 15px;
+    padding-left: 15px;
+    color: #FFF;
+
+font-family: Circular Std;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 16px;
 }
 .nav-heading
 {
     margin-left: 20px;
+      color: #B3B3B3;
+
+font-family: Circular Std;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 16px; 
+letter-spacing: 1.2px;
+text-transform: uppercase;
 }
 
 .bottom-photo>img
@@ -80,21 +106,68 @@
 }
 .right-textbox{
     flex: 8;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     color: white;
   
 }
+.right-textbox>h1{
+    color: #FFF;
 
+font-family: Circular Std;
+font-size: 90px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+letter-spacing: -1.8px;
+
+}
+
+.right-textbox p:first-child
+{
+    color: #FFF;
+
+
+font-size: 13px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: -0.26px;
+}
+.right-textbox p:nth-child(2)
+{
+   
+    color: #FFF;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 146.9%; /* 20.566px */
+letter-spacing: -0.28px;
+
+
+
+font-size: 13px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: -0.26px;
+}
 .right-second{
     width: 100%;
-    
+   display: flex;
+   flex-direction: column;
+}
+.right-second-2
+{
     background-color: black;
-    
-   
 }
 .right-second-1
 {
+
     padding-top: 20px;
     padding: 20px;
+    background: linear-gradient(180deg, #556962 0%, #221f1f 89.7%);
 }
 
 .right-third p:first-child {
@@ -216,6 +289,14 @@ th, td {
    
     padding: 8px;
     text-align: center;
+    color: #FFF;
+
+font-family: Circular Std;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+   
   }
   table
   {
@@ -223,4 +304,20 @@ th, td {
     color: white;
     width: 95%;
   }
+  .side-item:hover{
   
+    border-radius: 6px;
+background: #282828;
+}
+
+th
+{
+    
+    border-bottom: 1px solid rgb(206, 175, 175);
+}
+.serial
+{
+    display: flex;
+    justify-content: space-between;
+    padding-right: 100px;
+}
